# jsd-tpa-gtm

./: CMakeLists.txt  README.md
0-tpa-cmake/: tpa-gtm-lib-set-compiler-settings.cmake  tpa-gtm-test-lib-set-compiler-settings.cmake  tpa-gtm-tests-set-compiler-settings.cmake
0-tpa-cmake/compiler-settings/: tpa-gtm-common-set-linux-compiler-settings.cmake  tpa-gtm-common-set-windows-compiler-settings.cmake  tpa-gtm-lib-set-linux-compiler-settings.cmake  tpa-gtm-lib-set-windows-compiler-settings.cmake  tpa-gtm-test-lib-set-linux-compiler-settings.cmake  tpa-gtm-test-lib-set-windows-compiler-settings.cmake  tpa-gtm-tests-set-linux-compiler-settings.cmake  tpa-gtm-tests-set-windows-compiler-settings.cmake
1-tpa-sources/sources/tpa_gtm/jsd/tpa/gtm/: gtm.h  gtm_main.cpp  gtm_main.h  gtm_sls.h
1-tpa-sources/sources/tpa_gtm/jsd/tpa/gtm/modification/: Configurable_event_listener.cpp  Configurable_event_listener.h  Configurable_event_listener.hxx  Writable_command_line_arguments.cpp  Writable_command_line_arguments.h  Writable_command_line_arguments.hxx
1-tpa-sources/sources/tpa_gtm_test/jsd/tpa/gtm/: gtm_test.h  gtm_test_main.cpp  gtm_test_main.h  gtm_test_shared_library_support.h  gtm_test_sls.h
1-tpa-sources/sources/tpa_gtm_tests/: gtm_tests_main_entry.cpp
2-tpa-gtm/: CMakeLists.txt
2-tpa-gtm-lib/: CMakeLists.txt
3-tpa-gtm-test-lib/: CMakeLists.txt
4-tpa-gtm-tests/: CMakeLists.txt  linux-gtm-tests-debug.txt  linux-gtm-tests-release.txt
